[project]
name = "nas-tools"
version = "4.6.4"
description = "Nas Tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "cacheout>=0.16.0",
    "cachetools>=5.5.0",
    "cn2an>=0.5.23",
    "cryptography>=44.0.0",
    "dateparser>=1.2.0",
    "feapder>=1.9.1",
    "filelock>=3.16.1",
    "flask-caching>=2.3.0",
    "flask-compress>=1.17",
    "flask-login>=0.6.3",
    "flask-restx>=1.3.0",
    "flask-session>=0.8.0",
    "flask-sock>=0.7.0",
    "flask>=3.1.0",
    "httpx[socks]>=0.28.1",
    "icalendar>=6.1.0",
    "jinja2>=3.1.5",
    "jsonpath>=0.82.2",
    "loguru>=0.7.3",
    "lxml>=5.3.0",
    "openai>=1.59.3",
    "parse>=1.20.2",
    "plexapi>=4.16.0",
    "psutil>=6.1.1",
    "pycryptodome>=3.21.0",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "pypushdeer>=0.0.3",
    "pyquery>=2.0.1",
    "pyrsistent>=0.20.0",
    "python-dateutil>=2.9.0.post0",
    "python-hosts>=1.0.7",
    "qbittorrent-api>=2024.12.71",
    "redis-py-cluster>=2.1.3",
    "redis>=3.5.3",
    "requests[socks]>=2.32.3",
    "ruamel-yaml>=0.18.10",
    "slack-bolt>=1.22.0",
    "sqlalchemy>=2.0.36",
    "transmission-rpc>=7.0.11",
    "urllib3>=2.3.0",
    "watchdog>=6.0.0",
    "websockets>=14.1",
    "zhconv>=1.4.3",
    "setuptools>=75.7.0",
    "wheel>=0.45.1",
    "gunicorn>=23.0.0",
    "fast-bencode>=1.1.7",
    "pillow>=11.1.0",
    "iso639>=0.1.4",
    "func-timeout>=4.3.5",
    "humanize>=4.11.0",
    "srt>=3.5.3",
    "backcall>=0.2.0",
    "backports-shutil-get-terminal-size>=1.0.0",
    "pickleshare>=0.7.5",
    "pytz-deprecation-shim>=0.1.0.post0",
    "webdav4>=0.10.0",
    "pysmb>=1.2.10",
    "serverchan-sdk>=1.0.6",
]
